# renity

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
assets/: meson.build
assets/maps/: test.world  test1.tmj  test2.tmj
assets/meshes/: pyramid.mesh  square.mesh  tile2d.mesh
assets/scripts/: init.js  lib.js
assets/shaders/: basic_texture.shader  pointTile.shader  pointlight2d.shader  simple.shader  tile2d.shader  uniform.shader
assets/shaders/fragment/: plain_texture.frag  pointTile.frag  pointlight2d.frag  positional_color.frag  static_color.frag  tile2d.frag  uniform_color.frag
assets/shaders/vertex/: direct_ndc.vert  direct_ndc_with_tex.vert  pointTile.vert  pointlight2d.vert  tile2d.vert
assets/tilesets/: test1.tsj  test2.tsj
clients/: meson.build
clients/desktop/: main.cc  meson.build
clients/desktop/res/win32/: app.rc.in
docs/: Doxyfile.in  meson.build
include/: Action.h  ActionHandler.h  ActionManager.h  AnyPrimitive.h  Application.h  Dictionary.h  Dimension2D.h  EntityManager.h  GL_PointRenderer.h  GL_TileRenderer.h  HashTable.h  InputMapper.h  Point2D.h  Rect2D.h  Resource.h  ResourceManager.h  Sprite.h  Texture.h  Window.h  config.h.in  meson.build  types.h  version.h
include/resources/: GL_FragShader.h  GL_Mesh.h  GL_Shader.h  GL_ShaderProgram.h  GL_Texture2D.h  GL_VertShader.h  ScriptContext.h  StringBuffer.h  TileWorld.h  Tilemap.h  Tileset.h  meson.build
include/utils/: id_helpers.h  meson.build  physfsrwops.h  rwops_utils.h  string_helpers.h  surface_utils.h  texture_utils.h
server/: main.cc  meson.build
server/res/win32/: app.rc.in
src/: Action.cc  ActionManager.cc  AnyPrimitive.cc  Application.cc  Dictionary.cc  EntityManager.cc  GL_PointRenderer.cc  GL_TileRenderer.cc  InputMapper.cc  ResourceManager.cc  Sprite.cc  Texture.cc  Window.cc  meson.build  version.c.in  version.c.in.pre
src/resources/: GL_Mesh.cc  GL_Shader.cc  GL_ShaderProgram.cc  GL_Texture2D.cc  ScriptContext.cc  StringBuffer.cc  TileWorld.cc  Tilemap.cc  Tileset.cc  default_input_maps.h  meson.build
src/resources/default/: input_maps.h  texture.h
src/utils/: meson.build  physfsrwops.c  rwops_utils.c  surface_utils.c  texture_utils.c
tests/: Dictionary.cc  Dimension2D.cc  Point2D.cc  Rect2D.cc  Sprite.cc  Texture.cc  Window.cc  meson.build  surface_utils.c  texture_utils.c  version.c
tests/resources/: epic_png_zip.h  hood_png_zip.h
