asset_packages = {
  'maps': files([
    'maps/test1.tmj'
  ])
, 'meshes': files([
    'meshes/pyramid.mesh'
  , 'meshes/tile2d.mesh'
  ])
, 'shaders': files([
    'shaders/fragment/plain_texture.frag'
  , 'shaders/fragment/pointTile.frag'
  , 'shaders/fragment/positional_color.frag'
  , 'shaders/fragment/tile2d.frag'
  , 'shaders/fragment/uniform_color.frag'
  , 'shaders/vertex/direct_ndc.vert'
  , 'shaders/vertex/direct_ndc_with_tex.vert'
  , 'shaders/vertex/pointTile.vert'
  , 'shaders/vertex/tile2d.vert'
  , 'shaders/basic_texture.shader'
  , 'shaders/pointTile.shader'
  , 'shaders/simple.shader'
  , 'shaders/tile2d.shader'
  , 'shaders/uniform.shader'
  ])
# , 'textures': files([
#     'textures/default.png'
#   , 'textures/mushroom.png'
#   ])
, 'tilesets': files([
    'tilesets/test1.tsj'
  , 'tilesets/sheets/test1.png'
  ])
}
