asset_packages = {
  'maps': files([
    'maps/test1.tmj'
  , 'maps/test2.tmj'
  , 'maps/test.world'
  ])
, 'meshes': files([
    'meshes/pyramid.mesh'
  , 'meshes/tile2d.mesh'
  ])
, 'shaders': files([
    'shaders/fragment/plain_texture.frag'
  , 'shaders/fragment/pointlight2d.frag'
  , 'shaders/fragment/pointTile.frag'
  , 'shaders/fragment/positional_color.frag'
  , 'shaders/fragment/tile2d.frag'
  , 'shaders/fragment/uniform_color.frag'
  , 'shaders/vertex/direct_ndc.vert'
  , 'shaders/vertex/direct_ndc_with_tex.vert'
  , 'shaders/vertex/pointlight2d.vert'
  , 'shaders/vertex/pointTile.vert'
  , 'shaders/vertex/tile2d.vert'
  , 'shaders/basic_texture.shader'
  , 'shaders/pointlight2d.shader'
  , 'shaders/pointTile.shader'
  , 'shaders/simple.shader'
  , 'shaders/tile2d.shader'
  , 'shaders/uniform.shader'
  ])
# , 'textures': files([
#     'textures/default.png'
#   , 'textures/mushroom.png'
#   ])
, 'tilesets': files([
    'tilesets/sheets/test1.png'
  , 'tilesets/sheets/test2.png'
  , 'tilesets/test1.tsj'
  , 'tilesets/test2.tsj'
  ])
}
