asset_packages = {
  'maps': files([
    'maps/test1.tmj'
  , 'maps/test2.tmj'
  , 'maps/test.world'
  ])
# , 'meshes': files([
#     'meshes/pyramid.mesh'
#   , 'meshes/tile2d.mesh'
#   ])
, 'scripts': files([
    'scripts/init.js'
  , 'scripts/lib.js'
  ])
, 'shaders': files([
    'shaders/tile2d.shader'
  , 'shaders/fragment/tile2d.frag'
  , 'shaders/vertex/tile2d.vert'
  ])
# , 'textures': files([
#     'textures/default.png'
#   , 'textures/mushroom.png'
#   ])
, 'tilesets': files([
    'tilesets/sheets/test1.png'
  , 'tilesets/sheets/test2.png'
  , 'tilesets/test1.tsj'
  , 'tilesets/test2.tsj'
  ])
}
